--- a/fastpizza/funcionarios/index.html
+++ b/fastpizza/funcionarios/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -8,91 +9,28 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="config/mainScript.js"></script>
-	<link rel="stylesheet" type="text/css" href="config/style.css">
-	<link rel="icon" type="imagem/png" href="img/logo.png" />
+	<script type="text/javascript" src="../config/mainScript.js"></script>
+	<link rel="stylesheet" type="text/css" href="../config/style-dark.css">
+	<link rel="icon" type="imagem/png" href="../img/logo.png" />
 
-	<style type="text/css">
-		.logo-inicial{
-			padding-bottom: 19%;
-		}
-
-		.container-fluid{
-			min-height: 600px;
-		}
-	</style>
 </head>
+
 <body>
-
-	<nav class="navbar">
-		<a href="#" onclick="abreMenu();" class="botao-menu">☰</a>
-		<div class="navbar-links">
-			<a href="#" onClick="window.location.reload(true);" class="link-menu">Início</a>
-			<a href="#" class="link-menu">A Fast Pizza</a>
-			<a href="#" class="link-menu">Promoções</a>
-			<a href="#" class="link-menu">Cardápio</a>
-		</div>
-		
-	</nav>
-
-	<div class="side-menu" id="side-menu">
-		<div class="row">
-			<div class="col-md-12">
-				<a href="#" onclick="fechaMenu();" class="botao-fechar-menu"><img src="img/icons/fechar.png" class="side-menu-icon">Fechar</a>
-			</div>
-			<div class="col-md-12">
-				<a href="usuarios/cadastro.html"><img src="img/icons/cadastro.png" class="side-menu-icon">Cadastrar</a>
-			</div>
-			<div class="col-md-12">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img src="img/icons/entrar.png" class="side-menu-icon">Entrar</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- The Modal -->
-	<div class="modal fade" id="myModal">
-		<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content">
-
-				<!-- Modal Header -->
-				<div class="modal-header">
-					<h4 class="modal-title">Login</h4>
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-				</div>
-
-				<!-- Modal body -->
-				<div class="modal-body">
-					<form action="usuarios/acoes/login.php" method="POST">
-						<div class="form-group">
-							<label for="email">Email:</label>
-							<input type="email" class="form-control" id="email" maxlength="50" placeholder="Digite seu e-mail" name="email">
-						</div>
-						<div class="form-group">
-							<label for="pwd">Senha:</label>
-							<input type="password" class="form-control" id="pwd" maxlength="30" placeholder="Digite sua senha" name="senha">
-						</div>
-						<button type="submit" class="btn btn-success">Entrar</button>
-						<span style="float: right;"><a href="#" class="btn">Esqueci minha senha</a></span>
-					</form>
-				</div>
-
-				<!-- Modal footer -->
-				<div class="modal-footer">
-					<button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid">
 		<div class="logo-inicial" id="logo-inicial">
-			<img src="img/logo.png">
+			<img src="../img/logo.png">
 		</div>
-	</div>
-	
+
+		<div class="container" id="form-login">
+			<form method="post">
+				<input type="text" id="login-email" name="email" placeholder="E-mail">
+				<input type="text" id="login-senha" name="senha" placeholder="Senha">
+				<input type="submit" id="entrar" value="Entrar">
+			</form>
+		</div>
+
 	<footer>
 		Fast Pizza® | 2019
 	</footer>
 </body>
+
 </html>
