Continuação da tela de clientes e alteração da chamada do método de verificação de sessão

--- a/fastpizza/funcionarios/falhalogin.html
+++ b/fastpizza/funcionarios/falhalogin.html
@@ -47,7 +47,7 @@
 		})
 
 		function voltarInicio() {
-			setTimeout("window.location='../'", 1000);
+			setTimeout("window.location='../funcionarios'", 1000);
 		}
 		
 	</script>
